--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,3 +1,3 @@
 <html>
-<meta http-equiv="refresh" content="0; url=https://pcp.jtekinfo.com.br/public/index.php" />
+<meta http-equiv="refresh" content="0; url=/public/index.php" />
 </html>
